<?xml version="1.0"?>
<package>
  <name>simple_human_description</name>
  <version>0.1.0</version>
  <description>A very simple human_description package</description>

  <maintainer email="adallard@lirmm.fr">Antonin Dallard</maintainer>
  <maintainer email="arn.tanguy@gmail.com">Arnaud TANGUY</maintainer>

  <license>BSD</license>

  <build_depend>xacro</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
